<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1" android:layout_height="fill_parent">
	<TableLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:id="@+id/tableLayout1"
		android:stretchColumns="1" android:shrinkColumns="1">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_height="wrap_content"
			android:id="@+id/linearLayout1">
			<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/favoriteMarkerTextView" android:text="@string/FavoriteIndicator" android:textStyle="bold" android:textSize="12dp" android:layout_gravity="center_horizontal"></TextView>
			<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="12dp" android:layout_gravity="center_horizontal" android:text="@string/TeachableIndicator" android:id="@+id/teachableMarkerTextView"></TextView>
			<TextView android:layout_width="wrap_content" android:text="TextView"
				android:id="@+id/titleTextView" android:layout_height="wrap_content"
				android:inputType="textMultiLine" android:textSize="24dp" android:clickable="false" android:longClickable="false"></TextView>
			<LinearLayout android:layout_marginLeft="20dp"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:id="@+id/akaLayout">
				<TextView android:layout_width="wrap_content" android:id="@+id/textView7"
					android:layout_height="wrap_content" android:text="@string/aka"
					android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
				<TextView android:layout_width="wrap_content" android:text="TextView"
					android:id="@+id/akaTextView" android:layout_marginLeft="5dp"
					android:layout_height="wrap_content" android:singleLine="false"
					android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
			</LinearLayout>
			<LinearLayout android:layout_marginLeft="20dp"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:id="@+id/versionLayout">
				<TextView android:layout_width="wrap_content" android:id="@+id/textView8"
					android:layout_height="wrap_content" android:text="@string/Version"
					android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
				<TextView android:layout_width="wrap_content" android:text="TextView"
					android:id="@+id/versionTextView" android:layout_marginLeft="5dp"
					android:layout_height="wrap_content" android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
			</LinearLayout>
		</LinearLayout>
		<TableRow android:layout_marginTop="5dp"
			android:layout_width="fill_parent" android:id="@+id/ratingRow"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
				android:textStyle="bold" android:layout_width="fill_parent"
				android:layout_marginRight="5dip" android:text="@string/Rating"
				android:layout_gravity="left|center_vertical" android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
			<LinearLayout android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/linearLayout2">
	<LinearLayout android:id="@+id/linearLayout4" android:orientation="vertical"
		android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:layout_gravity="center_vertical">
		<TextView android:id="@+id/ratingTextView"
			android:layout_height="wrap_content" android:text="TextView"
			android:layout_gravity="center" android:layout_width="wrap_content"
			android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
		<ProgressBar android:indeterminate="false" android:layout_width="fill_parent"
			style="?android:attr/progressBarStyleHorizontal" android:max="5000"
			android:id="@+id/ratingProgressBar" android:layout_height="15dp"></ProgressBar>
	</LinearLayout>
				<Button android:text="@string/Rate"
					android:id="@+id/rateButton" android:layout_marginRight="5dip"
					android:textSize="12dp" android:layout_gravity="center_vertical" android:layout_height="40dp" android:layout_width="50dp"></Button>
			</LinearLayout>
		</TableRow>
		<TableRow android:layout_width="fill_parent" android:id="@+id/partsRow"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView3"
				android:textStyle="bold" android:layout_width="fill_parent"
				android:layout_marginRight="5dip" android:text="@string/Parts"
				android:layout_gravity="left|center_vertical" android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
			<TextView android:layout_height="wrap_content"
				android:layout_weight="1" android:id="@+id/partsTextView"
				android:layout_width="fill_parent" android:text="TextView"
				android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
		</TableRow>
		<TableRow android:layout_width="fill_parent" android:id="@+id/tagTypeRow"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_marginRight="5dip" android:text="@string/Type"
				android:layout_gravity="left|center_vertical" android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
			<TextView android:layout_height="wrap_content"
				android:layout_weight="1" android:id="@+id/tagTypeTextView"
				android:layout_width="fill_parent" android:text="TextView"
				android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/keyRow">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView4"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_marginRight="5dip" android:text="@string/Key"
				android:layout_gravity="left|center_vertical" android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
			<depollsoft.pitchperfect.lib.ui.PitchPipeButton android:layout_height="40dp" android:text="@string/Play" android:layout_width="50dp" android:id="@+id/playKeyNoteButton" android:textSize="12dp" android:layout_marginRight="5dp" android:layout_marginLeft="-5dp"></depollsoft.pitchperfect.lib.ui.PitchPipeButton>
		</TableRow>
		<TableRow android:layout_width="wrap_content" android:id="@+id/classicTagRow"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView5"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_marginRight="5dip" android:text="@string/ClassicTag"
				android:layout_gravity="left|center_vertical" android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
			<TextView android:layout_height="wrap_content" android:id="@+id/classicTagTextView"
				android:layout_width="wrap_content" android:text="TextView"
				android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
		</TableRow>
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/linearLayout3" android:orientation="vertical"
			android:layout_gravity="fill" android:layout_height="wrap_content">
			<depollsoft.lib.ui.Hyperlink
				android:layout_gravity="center" android:layout_width="wrap_content"
				android:textSize="20dip" android:id="@+id/sheetMusicLink"
				android:layout_height="wrap_content" android:textStyle="bold"
				android:text="@string/SheetMusic" android:inputType="text"
				android:layout_margin="5dip"></depollsoft.lib.ui.Hyperlink>
		</LinearLayout>
	<TableRow android:layout_height="wrap_content" android:id="@+id/lyricsRow"
		android:layout_width="fill_parent">
		<TextView android:layout_width="wrap_content"
			android:textStyle="bold" android:layout_height="wrap_content"
			android:layout_marginRight="5dip" android:layout_gravity="left"
			android:id="@+id/textView7" android:text="@string/Lyrics"
			android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textMultiLine" android:layout_gravity="fill" android:id="@+id/lyricsTextView" android:text="TextView" android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
	</TableRow>
		<TableRow android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/notesRow">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView6"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_marginRight="5dip" android:text="@string/Notes"
				android:layout_gravity="left" android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
			<TextView android:layout_height="wrap_content" android:id="@+id/notesTextView"
				android:layout_width="fill_parent" android:text="TextView"
				android:layout_gravity="fill" android:inputType="textMultiLine"
				android:textSize="12dp" android:clickable="false" android:longClickable="false"></TextView>
		</TableRow>
	</TableLayout>
	</ScrollView>
</LinearLayout>
