<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="wrap_content">
	<depollsoft.lib.ui.LoadingImageView
		android:id="@+id/videoPreview" android:layout_marginBottom="4dp"
		android:layout_marginTop="4dp" android:layout_weight="0" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_gravity="center_vertical" android:layout_height="60dp" android:layout_width="80dp"/>
	<TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:shrinkColumns="1" android:stretchColumns="1" android:layout_gravity="center_vertical|fill_horizontal">
		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_marginRight="5dip" android:textStyle="bold" android:layout_width="wrap_content" android:text="@string/SungBy" android:layout_height="wrap_content" android:id="@+id/textView1" android:clickable="false" android:longClickable="false" android:linksClickable="false" android:textSize="12dp"></TextView>
			<TextView android:text="TextView" android:layout_height="wrap_content" android:id="@+id/sungByTextView" android:inputType="textMultiLine" android:layout_width="fill_parent" android:clickable="false" android:longClickable="false" android:linksClickable="false" android:textSize="12dp"></TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content" android:id="@+id/keyRow" android:layout_height="wrap_content">
			<TextView android:layout_marginRight="5dip" android:textStyle="bold" android:layout_width="wrap_content" android:text="@string/Key" android:layout_height="wrap_content" android:id="@+id/textView3" android:clickable="false" android:longClickable="false" android:linksClickable="false" android:textSize="12dp"></TextView>
			<TextView android:text="TextView" android:layout_height="wrap_content" android:id="@+id/keyTextView" android:inputType="textMultiLine" android:layout_width="fill_parent" android:clickable="false" android:longClickable="false" android:linksClickable="false" android:textSize="12dp"></TextView>
		</TableRow>
		<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_marginRight="5dip" android:textStyle="bold" android:layout_width="wrap_content" android:text="@string/Posted" android:layout_height="wrap_content" android:id="@+id/textView5" android:clickable="false" android:longClickable="false" android:linksClickable="false" android:textSize="12dp"></TextView>
			<TextView android:text="TextView" android:layout_height="wrap_content" android:id="@+id/postedTextView" android:inputType="textMultiLine" android:layout_width="fill_parent" android:clickable="false" android:longClickable="false" android:linksClickable="false" android:textSize="12dp"></TextView>
		</TableRow>
	<LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center" android:layout_width="fill_parent">
		<CheckBox android:layout_height="wrap_content" android:text="@string/Multitrack" android:layout_gravity="center" android:id="@+id/multitrackCheckBox" android:layout_width="wrap_content" android:clickable="false" android:textSize="12dp" android:button="@drawable/ic_yesnocheck"></CheckBox>
	</LinearLayout>
	</TableLayout>
</LinearLayout>
